--- a/index.html
+++ b/index.html
@@ -129,60 +129,99 @@
   </div>
 
 <!--   Testimonials row -->
- <div class="row five"> 
- <section id="testimonials">
+ <div class="row five fullwidth"> 
 
-      <div class="row content flex-container ">
-    
-         <div id="testimonial-slider" class="flexslider">
+<div class="medium-12 small-12 columns testimonials ">
 
-            <ul class="slides">
-               <li>
-                  <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                  to do what you believe is great work. And the only way to do great work is to love what you do.
-                  If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
-                  </p>
 
-                  <div class="testimonial-author">
-                      <img src="images/avatars/avatar-1.jpg" alt="Author image">
-                      <div class="author-info">
-                        Steve Jobs
-                        <span class="position">CEO, Apple.</span>
-                      </div>
-                  </div>
-              </li> <!-- end slide -->
 
-               <li>                       
-                  <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
-                  </p>
-                  <div class="testimonial-author">
-                      <img src="images/avatars/avatar-2.jpg" alt="Author image">
-                      <div class="author-info">
-                        John Doe
-                        <span>CEO, ABC Corp.</span>
-                      </div>
-                  </div>                        
-               </li> <!-- end slide -->
 
-            </ul> <!-- end slides -->
-
-         </div> <!-- end flexslider -->         
-        
-      </div> <!-- end row -->
-
-   </section>  
-
+</div>
   </div>
-<div class="row six">
-  <div class="medium-6 small-6 columns">
+<div class="row six fullwidth foot-img">
+  <div class="medium-6 small-6 columns img-item">
+  </div>
+   <div class="medium-6 small-6 columns img-item">
   </div>
 </div>
+
+<div class="row fullwidth foot">
+
+<div class="medium-12 small-12 columns footer">
+
+
+    <ul class="masonry-list">
+  <li class="tile-case">
+    <a href="#">
+      <div class="tile-primary-content">
+        <img src="img/kidshappy.jpg" alt="">
+      </div>
+      <div class="tile-secondary-content">
+        <h2>Gallery</h2>
+        <p>Happy Faces</p>
+      </div>
+    </a>
+  </li>
+  <li class="tile-job">
+    <a href="#">
+      <div class="tile-primary-content">
+        <h2>Donate</h2>
+        <p>Our Services are a lifeline for vulnerable children.</p>
+      </div>
+      <div class="tile-secondary-content">
+        <p>Donate now to save life-saving help to kids. </p>
+      </div>
+    </a>
+  </li>
+  <li class="tile-facebook">
+    <a href="#">
+      <div class="tile-primary-content">
+        <h2>Facebook</h2>
+        <p>Come and Join Us Share our Stories in Social Media</p>
+      </div>
+      <div class="tile-secondary-content">
+        <p>Like us on Facebook</p>
+      </div>
+    </a>
+  </li>
+  <li class="tile-twitter">
+    <a href="https://twitter.com/chrisgrabinski">
+      <div class="tile-primary-content">
+        <h2>Twitter</h2>
+        <p>@chrisgrabinski Lol. What's wrong with your CSS, bro?</p>
+      </div>
+      <div class="tile-secondary-content">
+        <p>Follow us on Twitter</p>
+      </div>
+    </a>
+  </li>
+  <li class="tile-person">
+    <a href="#">
+      <div class="tile-primary-content">
+        <img src="https://pbs.twimg.com/profile_images/687989817171288064/Y4PzAmSn.jpg" alt="">
+      </div>
+      <div class="tile-secondary-content">
+        <div class="tile-secondary-container">
+          <h2>Chris Grabinski</h2>
+          <p>Front-end Development</p>
+        </div>
+      </div>
+    </a>
+  </li>
+  <li class="tile-client">
+    <a href="#">
+      <div class="tile-primary-content">
+        <img src="img/DSC00755.JPG" alt="">
+      </div>
+    </a>
+  </li>
+</ul>
+
+</div>  </div>
 
 </div>
  <script src="js/jquery.flexslider-min.js"></script>
- <canvas id="myCanvas"></canvas>
+
 <script src="js/cbpScroller.js"></script>
 <script src="js/cbpScroller1.js"></script>
     <script>
