--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <a href="#">
       <div class="tile-primary-content">
         <h2>Facebook</h2>
-        <p>Come and Join Us Share our Stories in Social Media</p>
+        <p>Come and Join Us Share our Stories on Social Media</p>
       </div>
       <div class="tile-secondary-content">
         <p>Like us on Facebook</p>
@@ -187,31 +187,40 @@
   <li class="tile-twitter">
     <a href="https://twitter.com/chrisgrabinski">
       <div class="tile-primary-content">
-        <h2>Twitter</h2>
-        <p>@chrisgrabinski Lol. What's wrong with your CSS, bro?</p>
+  
+         <h2>Our Mission</h2>
+     
+         <p>To provide hope to Children and Youths through a nurturing, Christian Community.</p>
       </div>
       <div class="tile-secondary-content">
-        <p>Follow us on Twitter</p>
+        <p>Be Kind and join us grow these skills</p>
       </div>
     </a>
   </li>
   <li class="tile-person">
     <a href="#">
       <div class="tile-primary-content">
-        <img src="https://pbs.twimg.com/profile_images/687989817171288064/Y4PzAmSn.jpg" alt="">
+        <img src="img/mushuho.jpg" alt="">
       </div>
       <div class="tile-secondary-content">
         <div class="tile-secondary-container">
-          <h2>Chris Grabinski</h2>
-          <p>Front-end Development</p>
+              <h2>Activities</h2>
+             <p>We engage kids in co-curriculum activities to nurture their talents </p>
+  
         </div>
       </div>
     </a>
   </li>
-  <li class="tile-client">
+
+
+   <li class="tile-case">
     <a href="#">
       <div class="tile-primary-content">
-        <img src="img/DSC00755.JPG" alt="">
+         <img src="img/DSC00755.JPG" alt="">
+      </div>
+      <div class="tile-secondary-content">
+        <h2>Talent</h2>
+        <p>Happy Times</p>
       </div>
     </a>
   </li>
