--- a/index.html
+++ b/index.html
@@ -9,69 +9,104 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/demo.css" />
+     <link rel="stylesheet" href="assets/demo.css">
+<link href='https://fonts.googleapis.com/css?family=Bubblegum+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   </head>
   <body>
-    <div class="row navbar fullwidth">
-    <!--   <div class="large-12 medium-12 columns back "> -->
-     <span class="link-copy"></span>
-        <nav class="menu menu--sebastian">
-          <ul class="menu__list">
-            <li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">About Us</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Gallery</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Support</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
-          </ul>
-        </nav>
-
-
-
-      <!-- Header Section
-   ================================================== -->
+    <div class="container"> 
+    <div class="row two fullwidth">
+    
+         <nav class="menu-navigation-icons">
  
 
-
-<script src="js/classie.js"></script>
-    <script src="js/clipboard.min.js"></script>
-    <script>
-    (function() {
-      [].slice.call(document.querySelectorAll('.menu')).forEach(function(menu) {
-        var menuItems = menu.querySelectorAll('.menu__link'),
-          setCurrent = function(ev) {
-            ev.preventDefault();
-
-            var item = ev.target.parentNode; // li
-
-            // return if already current
-            if (classie.has(item, 'menu__item--current')) {
-              return false;
-            }
-            // remove current
-            classie.remove(menu.querySelector('.menu__item--current'), 'menu__item--current');
-            // set current
-            classie.add(item, 'menu__item--current');
-          };
-
-        [].slice.call(menuItems).forEach(function(el) {
-          el.addEventListener('click', setCurrent);
-        });
-      });
-
-      [].slice.call(document.querySelectorAll('.link-copy')).forEach(function(link) {
-        link.setAttribute('data-clipboard-text', location.protocol + '//' + location.host + location.pathname + '#' + link.parentNode.id);
-        new Clipboard(link);
-        link.addEventListener('click', function() {
-          classie.add(link, 'link-copy--animate');
-          setTimeout(function() {
-            classie.remove(link, 'link-copy--animate');
-          }, 300);
-        });
-      });
-    })(window);
-    </script>
+    <a href="#" class="menu-blue"><i class="fa fa-home"></i><span>Home</span></a>
+    <a href="#" class="menu-green"><i class="fa fa-info" ></i><span>About Us</span></a>
+    <a href="#" class="menu-yellow"><i class="fa fa-archive"></i><span>Stories</span></a>
+     <a href="#" class="menu-magenta"><i class="fa fa-camera-retro"></i><span>Gallery</span></a>
+    <a href="#" class="menu-red"><i class="fa fa-phone"></i><span>Contacts</span></a>
+</nav>
+<div id="slider">
+<figure>
   
 
+<img src="img/happy.jpg" alt="">
 
+<img src="img/happy2.jpg" alt="">
+<!-- <h3>Watoto Kumi Children's Home</h3> -->
+<img src="img/happy-kids-6-368700.jpg" alt="">
+<img src="img/happy2.jpg" alt="">
+ <img src="DSC05837.JPG" alt="">
+<img src="img/nr_happy-faces-high-res2.jpg" alt="">
+<img src="img/children-boys-smile-happy-black-and-white-school.jpg" alt="">
+<img src="img/nr_happy-faces-high-res2.jpg" alt="">
+</figure>
+</div>
+    
+
+ </div>
+ <div class="row two fullwidth">
+  <div class="medium-12 small-12 columns features fullwidth">
+<!-- Features -->
+        <section id="templatemo_features">
+            <div class="container-fluid">
+                <header class="template_header">
+                    <h1 class="text-center"><span>...</span> Programs and Services <span>...</span></h1>
+                </header>
+                <div class=" large-12 small-12  columns">
+                    <div class="large-3 small-3  columns feature-box">
+                        <div class="feature-box-inner">
+                            <div class="feature-box-icon">
+                                <h2>Foster Care</h2>
+                            </div>
+                            <p>
+                                Every child deserves a safe place to call home. The home was established in 1996 to expand residential services by inviting families in the community to share their own homes with children in need. Watoto Kumi recruits, trains, licenses, and supports foster parents.
+                            </p>
+                        </div>
+                    </div>
+                   <div class="large-3 small-3  columns feature-box">
+                        <div class="feature-box-inner">
+                            <div class="feature-box-icon">
+                               <h2>Volunteer</h2>
+                            </div>
+                            <p>
+                               Volunteers are valued members of our organization. Their gift of time enriches and broadens the services at the Home.  orientations are held on campus to educate volunteers on our mission and values. We match children’s needs with the talents and skills of faithful volunteers.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="large-3 small-3  columns feature-box">
+                        <div class="feature-box-inner">
+                            <div class="feature-box-icon">
+                               <h2>Mentoring</h2>
+                            </div>
+                            <p>
+                                Watoto kumi has an Adult mentorship program that provides youth with supportive one-on-one relationships. This life-changing program gives individuals in the community an opportunity to be an inspiration and make a positive difference in a child’s life. 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="large-3 small-3  columns feature-box">
+                        <div class="feature-box-inner">
+                            <div class="feature-box-icon">
+                               <h2>Education</h2>
+                            </div>
+                            <p>
+                                We offer education to kids who come from family situations which may put them at risk. We work creatively to provide our children with emotional and psychological support and equip them with qualities that will enable them to contribute positively to society.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+  </div>
+ </div>
+ <div class="row three fullwidth">
+  <div class="large-6 small-6 columns"></div>
+ <div class="large-6 small-6 columns"></div>
+</div>
+
+
+  <script src="js/templatemo_scripts.js"></script>
 <script type="text/javascript" src="js/jquery.cslider.js"></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
