residential care and overlay

--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
  <!-- <div class="large-6 small-6 columns"></div> -->
 </div>
 <div class="row four fullwidth">
-  <div class="overlay">
+<!--   <div class="overlay"> -->
   <div class="small-11 small-centered columns bg-img">
+    <div class="overlay">
     <h4>Residential Care</h4>
     <p class="care">Watoto Kumi Childrens Home is a safe sanctuary <br> for every child</p>
   </div></div>
