--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/demo.css" />
      <link rel="stylesheet" href="assets/demo.css">
-    <!--  <link rel="stylesheet" type="text/css" href="css/demo2.css" /> -->
+    <script type="text/javascript" src="./assets/js/script.js"></script>
+
 <link href='https://fonts.googleapis.com/css?family=Bubblegum+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <script src="js/modernizr2.custom.js"></script>
+
   </head>
   <body>
     <div class="container"> 
@@ -119,13 +121,68 @@
 <div class="row four fullwidth">
 <!--   <div class="overlay"> -->
   <div class="small-11 small-centered columns bg-img">
-    <div class="overlay">
+   <!--  <div class="overlay"> -->
     <h4>Residential Care</h4>
     <p class="care">Watoto Kumi Childrens Home is a safe sanctuary <br> for every child</p>
-  </div></div>
+ <!--  </div> -->
+</div>
   </div>
 
+<!--   Testimonials row -->
+ <div class="row five"> 
+ <section id="testimonials">
 
+      <div class="row content flex-container ">
+    
+         <div id="testimonial-slider" class="flexslider">
+
+            <ul class="slides">
+               <li>
+                  <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
+                  to do what you believe is great work. And the only way to do great work is to love what you do.
+                  If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+                  </p>
+
+                  <div class="testimonial-author">
+                      <img src="images/avatars/avatar-1.jpg" alt="Author image">
+                      <div class="author-info">
+                        Steve Jobs
+                        <span class="position">CEO, Apple.</span>
+                      </div>
+                  </div>
+              </li> <!-- end slide -->
+
+               <li>                       
+                  <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
+                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+                  </p>
+                  <div class="testimonial-author">
+                      <img src="images/avatars/avatar-2.jpg" alt="Author image">
+                      <div class="author-info">
+                        John Doe
+                        <span>CEO, ABC Corp.</span>
+                      </div>
+                  </div>                        
+               </li> <!-- end slide -->
+
+            </ul> <!-- end slides -->
+
+         </div> <!-- end flexslider -->         
+        
+      </div> <!-- end row -->
+
+   </section>  
+
+  </div>
+<div class="row six">
+  <div class="medium-6 small-6 columns">
+  </div>
+</div>
+
+</div>
+ <script src="js/jquery.flexslider-min.js"></script>
+ <canvas id="myCanvas"></canvas>
 <script src="js/cbpScroller.js"></script>
 <script src="js/cbpScroller1.js"></script>
     <script>
